--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "telegram-mini",
   "version": "1.0.0",
   "description": "Clone basic feture of Telegram",
-  "main": "src/server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "node src/server.js",
-    "start": "NODE_ENV=production node src/server.js",
+    "build": "tsc",
+    "dev": "ts-node src/server.ts",
+    "start": "NODE_ENV=production node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
