--- a/package.json
+++ b/package.json
@@ -22,11 +22,19 @@
   "homepage": "https://github.com/PhanVanHieu-Ptit/Telegram-mini#readme",
   "dependencies": {
     "@fastify/cors": "^11.2.0",
+    "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
     "fastify": "^5.7.4",
     "fastify-autoload": "^3.13.0",
     "fastify-plugin": "^5.1.0",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.2",
+    "pg": "^8.18.0",
     "socket.io": "^4.8.3"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/pg": "^8.16.0"
   }
 }
