--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
   },
   "homepage": "https://github.com/PhanVanHieu-Ptit/Telegram-mini#readme",
   "dependencies": {
+    "@fastify/autoload": "^6.3.1",
     "@fastify/cors": "^11.2.0",
     "bcrypt": "^6.0.0",
     "better-sqlite3": "^12.6.2",
+    "dotenv": "^17.3.1",
     "fastify": "^5.7.4",
     "fastify-autoload": "^3.13.0",
     "fastify-plugin": "^5.1.0",
