--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fastify-plugin": "^5.1.0",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.2.2",
+    "mqtt": "^5.15.0",
     "pg": "^8.18.0",
     "socket.io": "^4.8.3",
     "zod": "^4.3.6"
